Entered a new comment

--- a/BCSDemoWebsite/BCSDemoWebsite.csproj
+++ b/BCSDemoWebsite/BCSDemoWebsite.csproj
@@ -222,6 +222,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Pages\BasePage.cs" />
+    <Compile Include="Models\Pages\ContentTypeAttribute.cs" />
     <Compile Include="Models\Pages\StartPage.cs" />
     <Compile Include="Models\ViewModels\IPageViewModel.cs" />
     <Compile Include="Models\ViewModels\LayoutModel.cs" />
