--- a/BCSDemoWebsite/packages.config
+++ b/BCSDemoWebsite/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="Castle.Windsor" version="4.1.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net461" />
@@ -13,13 +14,17 @@
   <package id="EPiServer.Framework.AspNet" version="11.9.1" targetFramework="net461" />
   <package id="EPiServer.Logging.Log4Net" version="2.2.2" targetFramework="net461" />
   <package id="EPiServer.ServiceLocation.StructureMap" version="2.0.1" targetFramework="net461" />
+  <package id="jQuery" version="1.10.2" targetFramework="net461" />
+  <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="StructureMap" version="4.5.2" targetFramework="net461" />
   <package id="structuremap.web" version="4.0.0.315" targetFramework="net461" />
