--- a/BCSDemoWebsite/BCSDemoWebsite.csproj
+++ b/BCSDemoWebsite/BCSDemoWebsite.csproj
@@ -218,17 +218,23 @@
   <ItemGroup>
     <Compile Include="Controllers\ArticlePageController.cs" />
     <Compile Include="Controllers\BasePageController.cs" />
+    <Compile Include="Controllers\CarouselDisplayBlockController.cs" />
     <Compile Include="Controllers\ListDisplayBlockController.cs" />
+    <Compile Include="Controllers\NewsPageController.cs" />
     <Compile Include="Controllers\StartPageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Blocks\ListDisplayBlock.cs" />
+    <Compile Include="Models\Blocks\CarouselDisplayBlock.cs" />
     <Compile Include="Models\Media\Image.cs" />
+    <Compile Include="Models\Pages\NewsCarouselPage.cs" />
     <Compile Include="Models\Pages\ArticleListPage.cs" />
     <Compile Include="Models\Pages\ArticlePage.cs" />
     <Compile Include="Models\Pages\BasePage.cs" />
+    <Compile Include="Models\Pages\NewsPage.cs" />
     <Compile Include="Models\Pages\StartPage.cs" />
+    <Compile Include="Models\ViewModels\CarouselDisplayViewModel.cs" />
     <Compile Include="Models\ViewModels\IPageViewModel.cs" />
     <Compile Include="Models\ViewModels\LayoutModel.cs" />
     <Compile Include="Models\ViewModels\ListDisplayViewModel.cs" />
@@ -277,11 +283,11 @@
     <None Include="packages.config" />
     <Content Include="Views\Shared\Layouts\_Root.cshtml" />
     <Content Include="Views\StartPage\Index.cshtml" />
-    <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\ArticlePage\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\ListDisplayBlock\Index.cshtml" />
+    <Content Include="Views\CarouselDisplayBlock\Index.cshtml" />
+    <Content Include="Views\NewsPage\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
