--- a/BCSDemoWebsite/Web.config
+++ b/BCSDemoWebsite/Web.config
@@ -225,7 +225,7 @@
   <episerver>
     <applicationSettings httpCacheability="Public" pageValidateTemplate="false" uiShowGlobalizationUserInterface="true" uiUrl="~/EPiServer/CMS/" urlRebaseKind="ToRootRelative" />
   </episerver>
-  <episerver.framework>
+  <episerver.framework createDatabaseSchema="true">
     <appData basePath="App_Data" />
     <scanAssembly forceBinFolderScan="true" />
     <virtualRoles addClaims="true">
@@ -329,6 +329,6 @@
     </protectedModules>
   </episerver.shell>
   <connectionStrings>
-    <add name="EPiServerDB" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|EPiServerDB_7e0b5513.mdf;Initial Catalog=EPiServerDB_7e0b5513;Connection Timeout=60;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="EPiServerDB" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|EpiserverDB.mdf;Initial Catalog=EPiServerDB_7e0b5513;Connection Timeout=60;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
